<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkerDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/workerDetailsCard"
            style="@style/margins"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="114dp">

                    <ImageView
                        android:id="@+id/workerDetailsPhoto"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="114dp"
                        android:layout_height="114dp"
                        android:contentDescription="@string/workerPhoto"
                        />

                    <ImageView
                        android:id="@+id/workerDetailsTrust"
                        style="@style/margins"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:contentDescription="@string/workerTrustIcon"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:id="@+id/workerDetailsName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Worker Name"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        />
                    <TextView
                        android:id="@+id/workerDetailsCompany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        tools:text="Worker Company"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textColor="?android:attr/textColorSecondary"
                        />

                    <TextView
                        android:id="@+id/workerDetailsGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        tools:text="Worker Company"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textColor="?android:attr/textColorSecondary"
                        />

                    <TextView
                        android:id="@+id/workerDetailsPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        tools:text="Worker Company"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textColor="?android:attr/textColorSecondary"
                        />

                </LinearLayout>
                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
                    <TextView
                        android:id="@+id/workerDetailsTrustEditTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/workerDetailsTrustEditCaption"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textColor="?android:attr/textColorSecondary"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/workerDetailsTrustEditImageBad"
                        style="@style/margins"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:tint="@color/trustLevelBad_dark"
                        android:src="@drawable/mood_bad"
                        android:contentDescription="@string/workerTrustIcon"
                        />

                    <ImageView
                        android:id="@+id/workerDetailsTrustEditImageGood"
                        style="@style/margins"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:tint="@color/trustLevelGood_dark"
                        android:src="@drawable/sentiment_satisfied"
                        android:contentDescription="@string/workerTrustIcon"
                        />

                    <ImageView
                        android:id="@+id/workerDetailsTrustEditImageGreat"
                        style="@style/margins"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:tint="@color/trustLevelGreat_dark"
                        android:src="@drawable/sentiment_very_satisfied"
                        android:contentDescription="@string/workerTrustIcon"
                        />
                </LinearLayout>

                <!-- Buttons -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/workerDetailsSaveBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/workerDetailsSaveBtn"
                        style="?attr/borderlessButtonStyle"
                        />

                    <com.google.android.material.button.MaterialButton
                    android:id="@+id/workerDetailsCancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/workerDetailsCancelBtn"
                    style="?attr/borderlessButtonStyle"
                    />
                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>